--- a/src/content/blogs/getting-started.mdx
+++ b/src/content/blogs/getting-started.mdx
@@ -1,32 +1,43 @@
 ---
-title: "Get Started with Our Online Text Editor"
-description: "Learn how to get started with our online text editor and make the most of its features."
-date: 2024-05-18
-tags: ["get-started", "guide"]
+title: "Future Developer Club: A New Chapter Begins"
+description: "Discover the relaunch of our university's Future Developer Club, its vision, and exciting opportunities ahead."
+date: 2025-01-22
+tags: ["fdc", "update", "announce"]
 published: true
 ---
 
-Welcome to our powerful online text editor! Whether you're a writer, a developer, or someone who needs to collaborate on documents, our editor is designed to provide you with a seamless and efficient writing experience.
+We are thrilled to announce the relaunch of the Future Developer Club. After a period of dormancy, the club is back with renewed energy, a clear vision, and a mission to empower and inspire the next generation of developers at Eloued University.
 
-## Key Features
+## Why Relaunch the Club?
 
-- **Block-based Editor**: Our editor uses a block-based approach, allowing you to organize your content into blocks for easy restructuring and formatting.
-- **Rich Text Formatting**: Enhance your writing with various formatting options, including headings, bold, italic, lists, and more.
-- **Collaboration**: Invite others to collaborate on your documents in real-time, making it easy to work together on projects or assignments.
-- **Cloud Storage**: Your documents are automatically saved and stored in the cloud, ensuring you never lose your work.
+The tech world is evolving rapidly, and the demand for skilled developers and innovators has never been greater. Recognizing this, we decided to relaunch the Future Developer Club to provide students with a platform to explore, learn, and grow in the field of technology. The club aims to bridge the gap between academic learning and practical application by fostering a community of like-minded individuals passionate about technology and development.
 
-## Getting Started
+## Our Vision and Mission
 
-To begin using our online text editor, simply create a new document or open an existing one. You'll be greeted with a clean interface where you can start typing or adding blocks.
+The Future Developer Club is dedicated to:
 
-### Adding Blocks
+- Empowering Students: By providing resources, mentorship, and hands-on experience to help students excel in their tech journey.
 
-To add a new block, click the "+" button at the end of the current block or press the "Enter" key. You can choose from various block types, such as text, code, image, or quote.
+- Fostering Innovation: Encouraging creative problem-solving and the development of innovative solutions to real-world challenges.
 
-### Formatting Text
+- Building a Community: Creating a collaborative environment where students can network, share ideas, and support each other&apos;s growth.
 
-Highlight the text you want to format and use the toolbar at the top of the editor to apply styles like bold, italic, or different heading levels.
+## What&apos;s in Store?
 
-### Collaborating
+The relaunch marks the beginning of an exciting journey filled with opportunities for learning and growth. Here&apos;s what you can look forward to:
 
-To collaborate with others, click on `Add Contributor` button and then put the `id` of the contributor. They'll be able to see your changes in real-time, and you'll see theirs.
+- Workshops and Tech Talks: Learn from industry professionals and experienced developers about the latest tools, technologies, and trends.
+
+- Hackathons and Coding Challenges: Test your skills and collaborate with peers to solve challenging problems.
+
+- Mentorship Programs: Get guidance and insights from experts to accelerate your career in tech.
+
+- Community Projects: Work on impactful projects that address real-world issues and contribute to open-source initiatives.
+
+## Join Us on This Journey
+
+Whether you&apos;re a seasoned coder or just starting your tech journey, the Future Developer Club is the perfect place to learn, grow, and connect with others who share your passion for technology.
+
+Follow us on our social media channels for updates on upcoming events and initiatives. Don&apos;t miss this opportunity to be part of a vibrant community that is shaping the future of technology at Eloued University.
+
+Let&apos;s innovate, inspire, and build the future together. Welcome to the Future Developer Club!
