--- a/src/content/blogs/problem-solving.mdx
+++ b/src/content/blogs/problem-solving.mdx
@@ -2,7 +2,7 @@
 title: "The Art of Problem-Solving: From Foundations to Programming and Competitive Platforms"
 description: "Exploring problem-solving techniques from foundational concepts to advanced competitive programming."
 date: 2024-01-21
-tags: ["problem-solving", "programming", "algorithms", "coding-skills"]
+tags: ["problem-solving", "algorithms"]
 published: true
 ---
 
