--- a/src/content/blogs/getting-started.mdx
+++ b/src/content/blogs/getting-started.mdx
@@ -1,20 +1,20 @@
 ---
-title: "Future Developer Club: A New Chapter Begins"
-description: "Discover the relaunch of our university's Future Developer Club, its vision, and exciting opportunities ahead."
+title: "Future Developers Club: A New Chapter Begins"
+description: "Discover the relaunch of our university's Future Developers Club, its vision, and exciting opportunities ahead."
 date: 2025-01-22
 tags: ["fdc", "update", "announce"]
 published: true
 ---
 
-We are thrilled to announce the relaunch of the Future Developer Club. After a period of dormancy, the club is back with renewed energy, a clear vision, and a mission to empower and inspire the next generation of developers at Eloued University.
+We are thrilled to announce the relaunch of the Future Developers Club. After a period of dormancy, the club is back with renewed energy, a clear vision, and a mission to empower and inspire the next generation of developers at Eloued University.
 
 ## Why Relaunch the Club?
 
-The tech world is evolving rapidly, and the demand for skilled developers and innovators has never been greater. Recognizing this, we decided to relaunch the Future Developer Club to provide students with a platform to explore, learn, and grow in the field of technology. The club aims to bridge the gap between academic learning and practical application by fostering a community of like-minded individuals passionate about technology and development.
+The tech world is evolving rapidly, and the demand for skilled developers and innovators has never been greater. Recognizing this, we decided to relaunch the Future Developers Club to provide students with a platform to explore, learn, and grow in the field of technology. The club aims to bridge the gap between academic learning and practical application by fostering a community of like-minded individuals passionate about technology and development.
 
 ## Our Vision and Mission
 
-The Future Developer Club is dedicated to:
+The Future Developers Club is dedicated to:
 
 - Empowering Students: By providing resources, mentorship, and hands-on experience to help students excel in their tech journey.
 
@@ -36,8 +36,8 @@ The relaunch marks the beginning of an exciting journey filled with opportunitie
 
 ## Join Us on This Journey
 
-Whether you&apos;re a seasoned coder or just starting your tech journey, the Future Developer Club is the perfect place to learn, grow, and connect with others who share your passion for technology.
+Whether you&apos;re a seasoned coder or just starting your tech journey, the Future Developers Club is the perfect place to learn, grow, and connect with others who share your passion for technology.
 
 Follow us on our social media channels for updates on upcoming events and initiatives. Don&apos;t miss this opportunity to be part of a vibrant community that is shaping the future of technology at Eloued University.
 
-Let&apos;s innovate, inspire, and build the future together. Welcome to the Future Developer Club!
+Let&apos;s innovate, inspire, and build the future together. Welcome to the Future Developers Club!
