--- a/src/content/blogs/mastering-git-github.mdx
+++ b/src/content/blogs/mastering-git-github.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Mastering Git & GitHub: A Workshop to Empower Future Developers"
-description: "Highlights from the two-session workshop hosted by the Future Developer Club, covering Git basics, GitHub collaboration"
-date: 2024-03-04
+description: "Highlights from the two-session workshop hosted by the Future Developers Club, covering Git basics, GitHub collaboration"
+date: 2024-11-8
 tags: ["git", "github"]
 published: true
 ---
 
-The Future Developer Club recently hosted an exciting two-session workshop on Git and GitHub,
+The Future Developers Club recently hosted an exciting two-session workshop on Git and GitHub,
 one of the most essential tools for modern developers.
 With a hands-on approach, this event brought together students eager to learn how to manage code collaboratively,
 track changes, and contribute effectively to projects.
@@ -65,5 +65,5 @@ Here are some moments captured during the workshop:
 
 ## What's Next?
 
-With this foundational knowledge, the Future Developer Club is set to host more advanced sessions on topics like branching strategies, pull requests, and open-source contributions. This workshop is just the beginning of many exciting events aimed at equipping our students with the skills to excel in the tech industry.
+With this foundational knowledge, the Future Developers Club is set to host more advanced sessions on topics like branching strategies, pull requests, and open-source contributions. This workshop is just the beginning of many exciting events aimed at equipping our students with the skills to excel in the tech industry.
 Stay tuned for upcoming workshops, and let's keep pushing boundaries—one `git push` at a time!
