--- a/src/content/blogs/open-day.mdx
+++ b/src/content/blogs/open-day.mdx
@@ -1,14 +1,14 @@
 ---
-title: "Future Developer Club's Open Day"
+title: "Future Developers Club's Open Day"
 description: "Celebrating student creativity through innovative website projects."
 date: 2024-12-1
 tags: ["fdc", "open-day"]
 published: true
 ---
 
-## Future Developer Club's Open Day
+## Future Developers Club's Open Day
 
-The Future Developer Club recently hosted an Open Day, spotlighting students' exceptional website projects. From e-commerce platforms to creative portfolios, the event showcased innovation, technical skill, and collaboration.
+The Future Developers Club recently hosted an Open Day, spotlighting students' exceptional website projects. From e-commerce platforms to creative portfolios, the event showcased innovation, technical skill, and collaboration.
 
 <img
   className="rounded-md border"
