--- a/src/content/blogs/how-to-write-the-best-graduation-bachelors-memory.mdx
+++ b/src/content/blogs/how-to-write-the-best-graduation-bachelors-memory.mdx
@@ -11,6 +11,7 @@ Today, the Future Developers Club (FDC) hosted an insightful lecture on "How to 
 ## Speaker & Key Insights
 
 The session was led by Tuka Habita, who shared valuable tips on:
+
 - Organizing and structuring a thesis properly.
 - Conducting thorough research and citing sources.
 - Writing effectively and avoiding common mistakes.
@@ -18,17 +19,18 @@ The session was led by Tuka Habita, who shared valuable tips on:
 
 ## Impact & Takeaways
 
-The event provided attendees with practical knowledge and strategies to enhance their academic writing skills. 
+The event provided attendees with practical knowledge and strategies to enhance their academic writing skills.
 The interactive session included Q&A discussions where students got personalized advice on their thesis projects.
 
 ## Moments from the Event
 
-{/* <img
+{/_ <img
   className="rounded-md border"
   alt="Lecture"
   src="https://files.edgestore.dev/5iwpojmnomxbon5i/publicFiles/_public/27840afb-e6b4-4b53-980d-10729d74a668.jpg"
-/> */}
+/> _/}
 
 ## What&apos;s Next?
-FDC continues to support students with workshops and sessions that boost their academic and professional growth. 
+
+FDC continues to support students with workshops and sessions that boost their academic and professional growth.
 Stay tuned for more upcoming events!
