--- a/src/content/blogs/how-to-write-the-best-graduation-bachelors-memory.mdx
+++ b/src/content/blogs/how-to-write-the-best-graduation-bachelors-memory.mdx
@@ -10,7 +10,7 @@ Today, the Future Developers Club (FDC) hosted an insightful lecture on "How to 
 
 ## Speaker & Key Insights
 
-The session was led by Tuka Habita, who shared valuable tips on:
+The session was led by Touka Habita, who shared valuable tips on:
 - Organizing and structuring a thesis properly.
 - Conducting thorough research and citing sources.
 - Writing effectively and avoiding common mistakes.
